PIG-5343: Upgrade developer build environment (nielsbasjes via szita)
git-svn-id: https://svn.apache.org/repos/asf/pig/trunk@1840299 13f79535-47bb-0310-9956-ffa450edef68